2008-10-04  Jonathan Pryor  <jpryor@novell.com>

	* Delegates.cs: Flush (adds "traditional" .Curry() methods).

2008-10-04  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: The TypeLoadException-generating gmcs bug has been
	  fixed, so now (1) the .Tokens() unit test can run, and (2) it found
	  some bugs (unsurprisingly).  Fix them.  In particular, if we hit an
	  element where acumulate(seed, s) returns false AND we already have
	  an element, then we should return the previous element, reset the
	  seed, and try accumulate(seed, s) again.  This way we don't "lose"
	  elements during processing.
	* TextReader.cs: .Tokens() can now use IEnumerableRocks.Tokens().

2008-09-30  Jonathan Pryor  <jpryor@novell.com>

	* TextReader.cs: Change the default semantics of .Lines(), .Words(),
	  and .Tokens() so that the TextReader *is* disposed by default.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* Either.cs: Finish the "expend all efforts to convert values"
	  approach by using IConvertable to convert the source value to the
	  destination value, in this case by using Convert.ChangeType().
	  Now allows EnumerableValueReader.Read() to perform "implicit"
	  conversions, e.g. int->bool, which TypeDescriptor doesn't support.
	  Consistently return NotSupportedException if the conversion throws
	  an exception (as Convert.ChangeType() throws InvalidCastException if
	  it fails, which makes for an ambiguous error condition).
	* EnumerableValueReader.cs: Don't bother witih IConvertible changes,
	  as Either.TryParse() now does this.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Change .Tokens() categories from Func<TSource,bool>
	  to Func<TAggregate, TSource, bool>, so that the callback can be
	  "smarter" about category detection.
	* String.cs: Add .Tokens() extension method on strings.
	* TextReader.cs: Revert .Words() semantic changes so that .Words() now
	  just returns whitespace-separated words (as before).  Add .Tokens()