@@ -1,3 +1,7 @@
+2008-12-04  Jonathan Pryor  <jpryor@novell.com>
+
+	* MaybeTest.cs: Add test for .Equals().
+
 2008-10-04  Jonathan Pryor  <jpryor@novell.com>
 
 	* DelegateTest.cs: Add tests for traditional .Curry().
